--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <script type="text/javascript" src="01 - double.js"></script>
-    <h1>hola</h1>
+    <h1>hola! This are excercises to practice</h1>
 </html>
