--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <script type="text/javascript" src="01 - double.js"></script>
     <h1>hola! This are excercises to practice</h1>
+    <h2>by Nigar</h2>
 </html>
